--- a/index.html
+++ b/index.html
@@ -7,13 +7,50 @@
   <base href="/" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <script>
+    window.tailwind = window.tailwind || {};
+    window.tailwind.config = { darkMode: 'class' };
+  </script>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    body { font-family: 'Poppins', sans-serif; }
+    :root {
+      color-scheme: light;
+      --bg: #e0f7fa;
+      --surface: #ffffff;
+      --muted: #6b7280;
+      --text: #0f172a;
+      --border: #e5e7eb;
+    }
+    body {
+      font-family: 'Poppins', sans-serif;
+      background-color: var(--bg);
+      color: var(--text);
+      transition: background-color 0.2s ease, color 0.2s ease;
+    }
+    body.dark {
+      color-scheme: dark;
+      --bg: #0b1220;
+      --surface: #0f172a;
+      --muted: #9ca3af;
+      --text: #e5e7eb;
+      --border: #1f2937;
+    }
+    body.dark .bg-gray-50 { background-color: var(--bg) !important; }
+    body.dark .bg-gray-100,
+    body.dark .bg-gray-200 { background-color: #111827 !important; }
+    body.dark .bg-white { background-color: var(--surface) !important; }
+    body.dark .text-gray-800,
+    body.dark .text-gray-700,
+    body.dark .text-gray-600 { color: var(--text) !important; }
+    body.dark .text-gray-500,
+    body.dark .text-gray-400 { color: var(--muted) !important; }
+    body.dark .border-gray-300 { border-color: var(--border) !important; }
+    body.dark input,
+    body.dark textarea { background-color: var(--surface) !important; color: var(--text) !important; border-color: var(--border) !important; }
   </style>
   <meta name="theme-color" content="#3A86FF">
 <script type="importmap">
